{
  "language": "Language",
  "german": "German",
  "english": "English",
  "done": "Done",
  "loading": "Loading…"
}
